# SQL_tests

./: CMakeLists.txt  README.md  build_Ub  exec
databases/: worldData.db  worldcities.csv
projects/tests/: CMakeLists.txt  auxiliar.hpp  main.cpp
projects/world_cities/: CMakeLists.txt  auxiliar.hpp  main.cpp
