
CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(SQLite_testing
	VERSION 1.0
	DESCRIPTION "Using SQLite with C++"
	#LANGUAGES CXX
)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/extern/sqlite-amalgamation-3340100)	# SQLite3 library compilation
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/projects/tests)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/projects/world_cities)
